--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "i18next": "^19.6.3",
     "javascript-time-ago": "^2.0.13",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-i18next": "^11.7.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-time-ago": "^6.0.1",
